--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -25,13 +25,11 @@ http {
 
 	server 
 	{
-		listen       442;
+		listen       443;
 		server_name  dtome-pe.42.fr;
 
-		location / 
-		{
-			root   /usr/share/nginx/html;
-			index  index.html index.htm;
-		}
+		location / {
+    	proxy_pass http://localhost:443;
+  		}
 	}
-}
+}proxy_pass
