--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -27,9 +27,7 @@ http {
 	{
 		listen       443;
 		server_name  dtome-pe.42.fr;
-
-		location / {
-    	proxy_pass http://localhost:443;
-  		}
+		root /var/www/html/dtome-pe.42.fr;
+		index index.php;
 	}
-}proxy_pass
+}
