--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
 	{
 		listen       443;
 		server_name  dtome-pe.42.fr;
-		root /var/www/html/dtome-pe.42.fr;
-		index index.php;
+	#	root /var/www/html/dtome-pe.42.fr;
+	#	index index.php;
 	}
 }
