--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -1,32 +1,24 @@
-user www-data;
-worker_processes auto;
-pid /run/nginx.pid;
-include /etc/nginx/modules-enabled/*.conf;
+events 
+{
 
-events {
-	worker_connections 768;
 }
 
-http {
-
-	include /etc/nginx/mime.types;
-	default_type application/octet-stream;
+http 
+{
 
 	ssl_protocols TLSv1.3;
-	ssl_prefer_server_ciphers on;
 
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 
-	gzip on;
-
-	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
-
 	server 
 	{
-		listen       443;
-		server_name  dtome-pe.42.fr;
+		listen 443 ssl;
+    	listen [::]:443 ssl ;
+		server_name  dtome-pe.42.fr www.dtome-pe.42.fr;
 		root /home/dtome-pe/data/web;
+
+		include snippets/self-signed.conf;
+    	include snippets/ssl-params.conf;
 	}
 }
