--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -3,11 +3,10 @@ FROM debian:bullseye
 RUN	apt-get update
 RUN apt-get install nginx -y
 RUN apt-get install openssl -y
-RUN apt-get install sudo -y
-RUN sudo apt install openssh-client -y
-RUN sudo apt install ufw -y
-RUN sudo ufw allow 42
+RUN openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/nginx-selfsigned.key -out /etc/ssl/certs/nginx-selfsigned.crt -subj "/C=SP/ST=Cat/L=BCN/O=42/OU=Cluster a/CN=dtome-pe.42.fr"
+RUN openssl dhparam -out /etc/ssl/certs/dhparam.pem 2048
 COPY nginx.conf /etc/nginx/nginx.conf
-EXPOSE 22
+COPY self-signed.conf /etc/nginx/snippets/self-signed.conf
+COPY ssl-params.conf /etc/nginx/snippets/ssl-params.conf
 EXPOSE 443
 CMD ["nginx", "-g", "daemon off;"]
