--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -20,5 +20,11 @@ http
 
 		include snippets/self-signed.conf;
     	include snippets/ssl-params.conf;
+
+		location / 
+		{
+    		index index.php index.html index.htm;
+    		try_files $uri $uri/ =404;
+		}
 	}
 }
