--- a/srcs/compose.yaml
+++ b/srcs/compose.yaml
@@ -9,13 +9,19 @@ services:
     volumes:
       - /home/dtome-pe/data/web:/home/dtome-pe/data/web
 
-  wordpress: 
-    image: "web"
-    build: wordpress/
-    volumes:
-     - /home/dtome-pe/data/web:/home/dtome-pe/data/web
+  #wordpress: 
+   # image: "web"
+    #build: wordpress/
+    #volumes:
+     #- /home/dtome-pe/data/web:/home/dtome-pe/data/web
 
- # mariadb:/home/dtome-pe/data/web
-  #  build: mariadb/
-   # volumes: 
-    #  - /home/dtome-pe/data/database
+  mariadb:
+    build: mariadb/
+    volumes: 
+    - /home/dtome-pe/data/db:/home/dtome-pe/data/db
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+      MYSQL_DATABASE: mydatabase
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    
