--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -1,7 +1,9 @@
 FROM debian:bullseye
 
-RUN apt-get update
-RUN apt-get install mariadb-server -y
-RUN apt-get install man -y
-RUN apt-get install sudo -y
-RUN service mariadb start
+RUN apt update
+RUN curl -LsS https://r.mariadb.com/downloads/mariadb_repo_setup | bash
+RUN apt-get install mariadb-server mariadb-client -y
+RUN apt-get install sudo
+RUN apt-get install systemctl -y
+RUN mariadb
+
