--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -1,18 +1,15 @@
 FROM debian:bullseye
 
-RUN apt update
-RUN apt upgrade
-RUN apt install systemctl -y
-RUN apt install aptitude -y
-RUN apt install -y software-properties-common
-RUN apt install gnupg -y
-RUN apt install curl -y
-RUN curl -sS https://downloads.mariadb.com/MariaDB/mariadb_repo_setup
-RUN apt update
-RUN apt upgrade
-RUN apt install mariadb-server -y
+RUN apt update -y
+RUN apt upgrade -y
+RUN mkdir /run/mysqld
+RUN apt-get install mariadb-server -y
+RUN chown -R mysql:root /var/lib/mysql
+RUN chown -R mysql:root /run/mysqld
+COPY 50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
+COPY db_configure.sh /home/
+
 EXPOSE 3306
 
-ENTRYPOINT ["/bin/bash"]
-CMD ["service", "mariadb", "start"]
-
+ENTRYPOINT ["/bin/bash", "-l", "-c"]
+CMD ["./home/db_configure.sh"]
