--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -5,26 +5,24 @@ events
 
 http 
 {
-
-	ssl_protocols TLSv1.3;
-
-	access_log /var/log/nginx/access.log;
-	error_log /var/log/nginx/error.log;
-
 	server 
 	{
 		listen 443 ssl;
-    	listen [::]:443 ssl ;
-		server_name  dtome-pe.42.fr www.dtome-pe.42.fr;
-		root /home/dtome-pe/data/web;
-
-		include snippets/self-signed.conf;
-    	include snippets/ssl-params.conf;
+		ssl_protocols TLSv1.2 TLSv1.3;
+		ssl_certificate /etc/nginx/ssl/inception.crt;
+		ssl_certificate_key /etc/nginx/ssl/inception.key;
+		
+		root /var/www/html;
+		server_name localhost;
 
 		location / 
 		{
-    		index index.php index.html index.htm;
-    		try_files $uri $uri/ =404;
+			try_files $uri $uri/ =404;
+		}
+		location ~ \.php$
+		{								
+			include snippets/fastcgi-php.conf;
+			#fastcgi_pass wordpress:9000;
 		}
 	}
 }
