set up functional but not configd wordpress container

--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -12,7 +12,7 @@ http
 		ssl_certificate /etc/nginx/ssl/inception.crt;
 		ssl_certificate_key /etc/nginx/ssl/inception.key;
 		
-		root /var/www/html;
+		root /var/www/wordpress;
 		server_name localhost;
 
 		location / 
@@ -22,7 +22,7 @@ http
 		location ~ \.php$
 		{								
 			include snippets/fastcgi-php.conf;
-			#fastcgi_pass wordpress:9000;
+			fastcgi_pass wordpress:9000;
 		}
 	}
 }
