--- a/srcs/compose.yaml
+++ b/srcs/compose.yaml
@@ -1,7 +1,8 @@
 services:
+  
   nginx:
     image: server
-    container_name: server
+    container_name: nginx
     build: nginx/
     ports:
       - "127.0.0.1:443:443"
@@ -9,13 +10,34 @@ services:
     extra_hosts:
       - "dtome-pe.42.fr:127.0.0.1"
     volumes:
-      - web_vol:/var/www/html
+      - web_vol:/var/www/wordpress
     networks:
       - inception
+    restart: on-failure
+
+  wordpress: 
+    image: web
+    container_name: wordpress
+    build: wordpress/
+    env_file: .env
+    environment:
+      MYSQL_ADMIN: ${MYSQL_ADMIN}
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
+      MYSQL_USER: ${MYSQL_USER}
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}
+    ports:
+      - "9000"
+      - "3306"
+    volumes:
+     - web_vol:/var/www/wordpress
+    networks:
+      - inception
+    restart: on-failure
 
   mariadb:
     image: db
-    container_name: db
+    container_name: mariadb
     build: mariadb/
     ports:
       - "3306"
@@ -30,6 +52,7 @@ services:
       MYSQL_PASSWORD: ${MYSQL_PASSWORD}
     networks:
       - inception
+    restart: on-failure
 
 volumes:
   web_vol:
