--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -8,7 +8,9 @@ RUN apt install php-fpm -y\
 				php-mysql -y\			
 				mariadb-client -y\
 				wget -y \
-				curl -y
+				curl -y \ 
+				systemctl -y \ 
+				sysvinit-utils -y
 
 RUN wget https://wordpress.org/latest.tar.gz -P /var/www
 RUN cd /var/www && tar -xzvf latest.tar.gz && rm latest.tar.gz
@@ -25,5 +27,8 @@ RUN mkdir /run/php
 
 EXPOSE 9000
 EXPOSE 3306
+
+COPY php.ini /etc/php/7.4/fpm/php.ini
+COPY www.conf /etc/php/7.4/fpm/pool.d/www.conf
 
 CMD ["/usr/sbin/php-fpm7.4", "-F"]
