--- a/srcs/nginx/Dockerfile
+++ b/srcs/nginx/Dockerfile
@@ -7,7 +7,11 @@ RUN apt-get install openssl -y
 RUN openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=FR/ST=IDF/L=Paris/O=42/OU=42/CN=login.42.fr/UID=login"
 RUN chmod 755 /var/www/html
 RUN chown -R www-data:www-data /var/www/html
+
 COPY nginx.conf /etc/nginx/nginx.conf
+COPY common.conf /etc/nginx/conf.d/
+COPY wordpress.conf /etc/nginx/conf.d/
+
 EXPOSE 443
 EXPOSE 9000
 CMD ["nginx", "-g", "daemon off;"]
