--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -1,16 +1,34 @@
+worker_processes 1;
+error_log /var/log/nginx/error.log warn;
+pid /var/run/nginx.pid;
 events 
 {
-
+ worker_connections 1024;
 }
 
 http 
 {
+	include /etc/nginx/mime.types;
+	default_type application/octet-stream;
+	log_format main '$remote_addr - $remote_user [$time_local] \"$request\" '
+	'$status $body_bytes_sent \"$http_referer\" '
+	'\"$http_user_agent\" \"$http_x_forwarded_for\"';
+	access_log /var/log/nginx/access.log main;
+	sendfile on;
+	#tcp_nopush on;
+	keepalive_timeout 65;
+	gzip on;
+	gzip_types text/css text/x-component application/x-javascript application/javascript text/javascript text/x-js text/richtext image/svg+xml text/plain text/xsd text/xsl text/xml image/x-icon;
+	
+	include /etc/nginx/sites-available/*.conf;
 	server 
 	{
 		listen 443 ssl;
 		ssl_protocols TLSv1.2 TLSv1.3;
 		ssl_certificate /etc/nginx/ssl/inception.crt;
 		ssl_certificate_key /etc/nginx/ssl/inception.key;
+
+		index index.php;
 		
 		root /var/www/wordpress;
 		server_name localhost;
