--- a/srcs/.env
+++ b/srcs/.env
@@ -8,3 +8,4 @@ MYSQL_ADMIN=dtome-pe-admin
 MYSQL_ROOT_PASSWORD=zErjAtEQL8frND0G4ay9
 MYSQL_USER=dtome-pe
 MYSQL_PASSWORD=2vKvMKxeCHpDzMwgCGPg
+MYSQL_HOSTNAME=mariadb
