--- a/srcs/.env
+++ b/srcs/.env
@@ -1,11 +1,18 @@
 
 DOMAIN_NAME=dtome-pe.42.fr
 
-CERTS=./XXXXXXXXXXXX
-
 MYSQL_DATABASE=InceptionDb
 MYSQL_ADMIN=dtome-pe-admin
 MYSQL_ROOT_PASSWORD=zErjAtEQL8frND0G4ay9
 MYSQL_USER=dtome-pe
 MYSQL_PASSWORD=2vKvMKxeCHpDzMwgCGPg
 MYSQL_HOSTNAME=mariadb
+
+DOMAIN_NAME=dtome-pe.42.fr
+TITLE=Inception
+ADMIN=dtome-pe
+ADMIN_PASSWORD=2vKvMKxeCHpDzMwgCGPg
+ADMIN_EMAIL=dtome-pe@student.42barcelona.com
+USER=dtome-pe
+USER_EMAIL=dtome-pe@student.42barcelona.com
+USER_PASSWORD=2vKvMKxeCHpDzMwgCGPg
