--- a/srcs/wordpress/Dockerfile
+++ b/srcs/wordpress/Dockerfile
@@ -12,9 +12,6 @@ RUN apt install php-fpm -y\
 				systemctl -y \ 
 				sysvinit-utils -y
 
-RUN wget https://wordpress.org/latest.tar.gz -P /var/www
-RUN cd /var/www && tar -xzvf latest.tar.gz && rm latest.tar.gz
-RUN		chown -R root:root /var/www/wordpress
 
 RUN mkdir /run/php
 
@@ -24,5 +21,6 @@ EXPOSE 3306
 COPY php.ini /etc/php/7.4/fpm/php.ini
 COPY www.conf /etc/php/7.4/fpm/pool.d/www.conf
 COPY wp_configure.sh /home/
+COPY wp-config.php /
 
 CMD ["./home/wp_configure.sh"]
