--- a/srcs/mariadb/Dockerfile
+++ b/srcs/mariadb/Dockerfile
@@ -4,6 +4,7 @@ RUN apt update -y
 RUN apt upgrade -y
 RUN mkdir /run/mysqld
 RUN apt-get install mariadb-server -y
+RUN apt-get install sysvinit-utils -y
 RUN chown -R mysql:root /var/lib/mysql
 RUN chown -R mysql:root /run/mysqld
 COPY 50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
