--- a/srcs/nginx/nginx.conf
+++ b/srcs/nginx/nginx.conf
@@ -31,16 +31,20 @@ http
 		index index.php;
 		
 		root /var/www/wordpress;
-		server_name localhost;
+		server_name dtome-pe.42.fr;
 
 		location / 
 		{
 			try_files $uri $uri/ =404;
 		}
-		location ~ \.php$
-		{								
-			include snippets/fastcgi-php.conf;
-			fastcgi_pass wordpress:9000;
+		location ~ \.php$ 
+		{
+		fastcgi_split_path_info ^(.+\.php)(/.+)$;
+		fastcgi_pass wordpress:9000; #PHP for wordpress will listen on the port 9000
+		fastcgi_index index.php;
+		include fastcgi_params;
+		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+		fastcgi_param SCRIPT_NAME $fastcgi_script_name;
 		}
 	}
 }
