--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -7,8 +7,8 @@ RUN apt-get install mariadb-server -y
 RUN apt-get install sysvinit-utils -y
 RUN chown -R mysql:root /var/lib/mysql
 RUN chown -R mysql:root /run/mysqld
-COPY 50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
-COPY db_configure.sh /home/
+COPY conf/50-server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
+COPY tools/db_configure.sh /home/
 
 EXPOSE 3306
 
